[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-rust>=1.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-ds-playground"
version = "0.1.0"
description = "A Rust-Python interactive data structure playground"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "typer[all]",
    "rich",
]

[project.scripts]
dsplayground = "dsplayground.cli:app"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools-rust]
rust_extensions = [
    { 
        path = "bindings/Cargo.toml",
        name = "advanced_ds_playground_bindings",
        binding = "PyO3",
        module_name = "advanced_ds_playground_bindings",
        debug = false
    }
]