[package]
name = "advanced_ds_playground_bindings"
version = "0.1.0"
edition = "2021"

[lib]
name="advanced_ds_playground_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
rust = { path = "../rust" } 

[package.metadata.maturin]
python-source = "../python"
